add command for running migration

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "/src/main.ts",
   "scripts": {
     "test": "jest",
-    "dev": "nodemon src/main.ts"
+    "dev": "nodemon src/main.ts",
+    "sequelize": "sequelize",
+    "migrate": "sequelize db:migrate"
   },
   "author": "Bagaskara",
   "license": "ISC",
